Card Section layouts, added skills and experience

--- a/about-me/index.html
+++ b/about-me/index.html
@@ -63,27 +63,72 @@
                 <div class="col-4">
                     <h2 class="subheading">Skills</h2>
                 </div>
-                <div class="col-8 card-text">
-                    <h3 class="subheading-2">Programming</h3>
-                    <ul>
-                        <li>Developing applications & software solutions using <strong>C, C++, Java and Python</strong></li>
-                        <li>Writing & executing scripts for automating tasks with <strong>Bash and Python</strong></li>
-                        <li>Organizing, querying, and manipulating data in <strong>relational databases using SQL</strong></li>
-                        <li>Filtering & manipulating data using <strong>regular expressions</strong></li>
-                        <li>Contributing to projects by following <strong>Agile methodologies</strong> and utilizing the <strong>Atlassian suite and Git</strong> for version control and collaboration</li>
-                        <li>Executing & analyzing <strong>unit tests</strong> to ensure correct functionality and meet expected behavior</li>
-                        <li>Creating electronic projects using <strong>Arduino microcontrollers</strong>, sensors, and other components</li>
-                    </ul>
-                    <h3 class="subheading-2">Web Development</h3>
-                    <ul>
-                        <li>Using <strong>Amazon Web Services</strong> to implement facial and image recognition solutions</li>
-                        <li>Designing & developing web pages using <strong>HTML, CSS, JavaScript, React, and Angular</strong> to create visually appealing online platforms</li>
-                        <li>Using the <strong>Bootstrap framework</strong> to make websites responsive with a mobile-first approach</li>
-                        <li>Building & managing using content management systems including <strong>WordPress, GoDaddy, Squarespace, Wix, Shopify, and Shift4Shop</strong></li>
-                        <li>Enhancing website visibility & traffic using on-page and off-page techniques to rank higher on <strong>search engine results</strong></li>
-                        <li>Creating & managing online advertising campaigns on <strong>Google Ads</strong> to promote products & services by targeting specific audiences</li>
-                        <li>Writing effective <strong>ad copy & web content</strong> using problem-benefit-solution structure and creative calls-to-action</li>
-                    </ul>
+                <div class="col-8">
+                    <div class="row skills-card" id="programming-skills">
+                        <div class="col-12 card-text">
+                            <h3 class="subheading-2" >Programming</h3>
+                            <ul>
+                                <li>Developing applications & software solutions using <strong>C, C++, Java and Python</strong></li>
+                                <li>Writing & executing scripts for automating tasks with <strong>Bash and Python</strong></li>
+                                <li>Organizing, querying, and manipulating data in <strong>relational databases using SQL</strong></li>
+                                <li>Filtering & manipulating data using <strong>regular expressions</strong></li>
+                                <li>Contributing to projects by following <strong>Agile methodologies</strong> and utilizing the <strong>Atlassian suite and Git</strong> for version control and collaboration</li>
+                                <li>Executing & analyzing <strong>unit tests</strong> to ensure correct functionality and meet expected behavior</li>
+                                <li>Creating electronic projects using <strong>Arduino microcontrollers</strong>, sensors, and other components</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-12">
+                            <br>
+                        </div>
+                    </div>
+                    <div class="row skills-card" id="web-dev-skills">
+                        <div class="col-12 card-text">
+                            <h3 class="subheading-2">Web Development</h3>
+                            <ul>
+                                <li>Using <strong>Amazon Web Services</strong> to implement facial and image recognition solutions</li>
+                                <li>Designing & developing web pages using <strong>HTML, CSS, JavaScript, React, and Angular</strong> to create visually appealing online platforms</li>
+                                <li>Using the <strong>Bootstrap framework</strong> to make websites responsive with a mobile-first approach</li>
+                                <li>Building & managing using content management systems including <strong>WordPress, GoDaddy, Squarespace, Wix, Shopify, and Shift4Shop</strong></li>
+                                <li>Enhancing website visibility & traffic using on-page and off-page techniques to rank higher on <strong>search engine results</strong></li>
+                                <li>Creating & managing online advertising campaigns on <strong>Google Ads</strong> to promote products & services by targeting specific audiences</li>
+                                <li>Writing effective <strong>ad copy & web content</strong> using problem-benefit-solution structure and creative calls-to-action</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-12">
+                            <br>
+                        </div>
+                    </div>
+                    <div class="row skills-card" id="seo-skills">
+                        <div class="col-12 card-text">
+                            <h3 class="subheading-2">Search Engine Optimization & Pay-Per-Click Ad Campaigns</h3>
+                            <ul>
+                                <li>Enhancing website visibility & traffic using on-page and off-page techniques to rank higher on <strong>search engine results</strong></li>
+                                <li>Creating & managing online advertising campaigns on <strong>Google Ads</strong> to promote products & services by targeting specific audiences</li>
+                                <li>Writing effective <strong>ad copy & web content</strong> using problem-benefit-solution structure and creative calls-to-action</li>
+                                <li>Certified in <strong>Google Analytics 4 and Google Ads Search & Display Campaigns</strong> through Google Digital Academy</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-12">
+                            <br>
+                        </div>
+                    </div>
+                    <div class="row skills-card" id="graphic-design-skills">
+                        <div class="col-12 card-text">
+                            <h3 class="subheading-2">Graphic Design</h3>
+                            <ul>
+                                <li>Utilizing <strong>Adobe Illustrator</strong> to create and manipulate scalable, high-quality vector graphics and illustrations for print & digital media</li>
+                                <li>Demonstrating expertise in <strong> iPad version of Adobe Illustrator</strong> for seamless creation and editing of vector graphics on a simplifed platform</li>
+                                <li>Using <strong>Adobe InDesign</strong> to design and layout print materials and digital content such as brochures, magazines, and flyers</li>
+                            </ul>
+                        </div>
+                    </div>
+
                 </div>
             </div>
             <div class="row card-row" id="experience">
@@ -91,7 +136,37 @@
                     <h2 class="subheading">Experience</h2>    
                 </div>
                 <div class="col-8">
-                    
+                    <div class="row exp-card" id="tal-exp">
+                        <div class="col-12 card-text">
+                            <h3 class="subheading-2" >The AD Leaf Marketing Firm</h3>
+                            <p><i>SEO & PPC Specialist, January 2023 - Present</i></p>
+                            <p>Collaborating closely with clients to develop and execute effective SEO & PPC strategies, providing regular updates and recommendations to ensure website performance goals were met</p>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-12">
+                            <br>
+                        </div>
+                    </div>
+                    <div class="row exp-card" id="sht-exp">
+                        <div class="col-12 card-text">
+                            <h3 class="subheading-2">Seven Hills Technology</h3>
+                            <p><i>Junior Developer, March 2022 - August 2022</i></p>
+                            <p>Used Angular and Bootstrap frameworks to engineer & remodel webpages to meet quality goals and customer requirements</p>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-12">
+                            <br>
+                        </div>
+                    </div>
+                    <div class="row exp-card" id="ngc-exp">
+                        <div class="col-12 card-text">
+                            <h3 class="subheading-2">Northrop Grumman</h3>
+                            <p><i>Software Engineering Intern, June 2017 - July 2021</i></p>
+                            <p>Developed applications & scripts to simplify tasks and provide tools for internal teams</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
